# SVT

./: CMakeLists.txt  LICENSE  README.md  main.f90
Finite_difference_method_for_diffusion/: CMakeLists.txt  generator_mtx.ipynb  main.cpp
Finite_difference_method_for_diffusion_nonstationary/: generator_mtx.ipynb  main.cpp
Finite_element_method/: CMakeLists.txt  main.cpp
Finite_volume_method/: CMakeLists.txt  main.cpp  square1_10.vtk  square1_100.vtk  square1_200.vtk
gmsh_task_2/: grid.geo  grid.vtk
inmost/: CMakeLists.txt  main.cpp
